# psycho-duel

./: .gitignore  Cargo.toml  FirstLore.MD  GUIDELINES_README.MD  README.MD
blender_files/: blank_female_wip.blend  def_male.blend  def_male.blend1  skybox.blend  skybox.blend1
lore_book/: book.toml
lore_book/book/: 404.html  chapter_1.html  chapter_2.html  index.html  print.html  searchindex.js  searchindex.json
lore_book/src/: chapter_1.md  chapter_2.md
psycho_duel/: Cargo.toml
psycho_duel/assets/characters/anim_skeletons/: def_m_main_skeleton.glb
psycho_duel/assets/characters/visual_parts/: def_m_arms.glb  def_m_head.glb  def_m_legs.glb  def_m_torso.glb
psycho_duel/src/: main.rs
psycho_duel/src/client/: animation.rs  camera.rs  egui.rs  load_assets.rs  mod.rs  player.rs  skybox.rs  world.rs
psycho_duel/src/server/: mod.rs  player.rs  save.rs  world.rs
psycho_duel/src/server/save_files/: player_info.bar
psycho_duel/src/shared/: diagnostic.rs  egui.rs  mod.rs  player.rs  protocol.rs  renderer.rs
