[package]
name = "psycho_duel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bevy core related dependencies
bevy = { version = "0.14.2", features = ["multi_threaded", "serialize", "bevy_state", "dynamic_linking"] } # Warning disable dynamic linking once we deploy the game
bevy_dylib = "0.14.2"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
# Networked environment - lightyear related dependencies
lightyear = {version =  "0.17.1",features = ["leafwing"]}
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
# Bevy inspector and egui crates 
bevy_egui = "0.30"
bevy-inspector-egui = "0.27"
# Bevy asset loader - Good plugin for avoiding "codey"
bevy_asset_loader = "0.21"
# Bevy input manager - Basically a mapper for inputs, we can grab joysticks and much more
leafwing-input-manager = "0.15"
# Bevy pan orbit camera - Turns out this plugin be hella good than my camera
bevy_panorbit_camera = {version = "0.20",features = ["bevy_egui"]}
# Save files dependencies
bincode = "1.3.3"
# Uuid utilized as unique identifier for our items
[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]